--- a/idris-cil.cabal
+++ b/idris-cil.cabal
@@ -57,6 +57,7 @@ test-suite spec
                   , base >= 4 && < 5
                   , mtl
                   , transformers
+                  , transformers-compat
                   , filepath >= 1.3.0.2
                   , process >= 1.2.0.0
                   , hspec >= 1.3
