--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,24 @@
 sudo: false
 language: haskell
 ghc: 7.8
+addons:
+  apt:
+    sources:
+      - hvr-ghc
+    packages:
+      - cabal-install-1.22
+      - happy-1.19.3
+      - alex-3.1.3
+before_install:
+- export PATH=/opt/alex/3.1.3/bin:/opt/happy/1.19.3/bin:/opt/cabal/1.22/bin:$PATH
 install:
-- cabal update
-- cabal install cabal-install
 - cabal --version
 - git clone --depth 1 https://github.com/idris-lang/Idris-dev.git vendor/idris
 - git clone --depth 1 https://github.com/bamboo/language-cil.git --branch idris-cil --single-branch vendor/language-cil
 script:
-- cd vendor/language-cil && cabal sandbox init --sandbox ../sandbox && cabal install --only-dependencies -j2 && cabal install
+- cd vendor/language-cil && cabal install --only-dependencies -j2 && cabal install
 - cd ../..
-- cd vendor/idris && cabal sandbox init --sandbox ../sandbox && make && make install
+- cd vendor/idris && make && make install
 - cd ../..
-- cabal sandbox init --sandbox vendor/sandbox
 - cabal install --only-dependencies --enable-tests -j2 && cabal configure --enable-tests
 - export PATH=$(pwd)/vendor/sandbox/bin:$PATH && cabal build && cabal test --show-details=always --test-options="--color" && cabal check
