--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ addons:
       - cabal-install-1.22
       - happy-1.19.3
       - alex-3.1.3
+      - mono-devel
 before_install:
 - export PATH=/opt/alex/3.1.3/bin:/opt/happy/1.19.3/bin:/opt/cabal/1.22/bin:$PATH
 install:
