encode cil file as utf8

--- a/idris-cil.cabal
+++ b/idris-cil.cabal
@@ -30,6 +30,8 @@ library
                   , process
                   , text
                   , transformers
+                  , bytestring
+                  , utf8-string
 
 executable idris-cil
   main-is:            Main.hs
