--- a/idris-cil.cabal
+++ b/idris-cil.cabal
@@ -22,6 +22,7 @@ library
                   , IRTS.Cil.FFI
   build-depends:    base >= 4.7 && <5
                   , containers
+                  , unordered-containers
                   , directory
                   , dlist >= 0.7.1.1
                   , filepath
