rename codegen executable following Idris master
> Avoid confusion between the compiler and codegens

--- a/idris-cil.cabal
+++ b/idris-cil.cabal
@@ -36,7 +36,7 @@ library
                   , utf8-string
                   , parsec >= 3.1.9
 
-executable idris-cil
+executable idris-codegen-cil
   main-is:            Main.hs
   build-depends:      base >= 4.7 && <5
                     , containers
