--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,8 @@ install:
 script:
 - cd vendor/language-cil && cabal install --only-dependencies -j2 && cabal install
 - cd ../..
-- cd vendor/idris && cabal install --only-dependencies --disable-optimisation -j2 && cabal configure --disable-optimisation --ghc-option=-O0 && cabal build --ghc-option=-O0 -j2 && cabal install --disable-optimisation -j2
+- cd vendor/idris && cabal install --only-dependencies -j2 && cabal configure && cabal build -j2 && cabal install -j2
 - cd ../..
 - cd rts && idris --install cil.ipkg && cd ..
 - cabal install --only-dependencies --enable-tests -j2 && cabal configure --enable-tests
-- cabal build && cabal test --show-details=always --test-options="--color"
+- cabal build && cabal test --show-details=streaming --test-options="--color"
