Run ciltree tests on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,13 @@ install:
 script:
 - cd vendor/language-cil && cabal install --only-dependencies -j2 && cabal install
 - cd ../..
+- cd ../ciltree
+- cabal install --only-dependencies --enable-tests -j2 && cabal configure --enable-tests
+- cabal test --show-details=streaming --test-options="--color" -j2
+- cd ..
 - cd vendor/idris && cabal install --only-dependencies -j2 && cabal configure && cabal build -j2 && cabal install -j2
 - cd ../..
-- cd rts && idris --install cil.ipkg && cd ../codegen
+- cd rts && idris --install cil.ipkg
+- cd ../codegen
 - cabal install --only-dependencies --enable-tests -j2 && cabal configure --enable-tests
-- cabal build && cabal test --show-details=streaming --test-options="--color"
+- cabal build && cabal test --show-details=streaming --test-options="--color" -j2
