--- a/codegen/idris-cil.cabal
+++ b/codegen/idris-cil.cabal
@@ -71,6 +71,7 @@ test-suite spec
                   , process
                   , directory
                   , hspec >= 1.3
+                  , hspec-expectations-pretty-diff
                   , smallcheck
                   , hspec-smallcheck
                   , idris >= 0.9.20
@@ -81,7 +82,7 @@ test-suite hlint
   ghc-options:      -threaded -rtsopts -with-rtsopts=-N
   type:             exitcode-stdio-1.0
   build-depends:    base >= 4 && < 5
-                  , hlint == 1.9.*
+                  , hlint
   hs-source-dirs:   test
   main-is:          HLint.hs
 
