--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ addons:
       - mono-devel
       - mono-utils
 before_install:
-- export PATH=/opt/ghc/7.10.3/bin:/opt/alex/3.1.3/bin:/opt/happy/1.19.3/bin:/opt/cabal/1.22/bin:$PATH
+- export PATH=/opt/ghc/7.10.3/bin:/opt/alex/3.1.3/bin:/opt/happy/1.19.3/bin:/opt/cabal/1.22/bin:/home/travis/.cabal/bin:$PATH
 install:
 - cabal update
 - git clone --depth 1 https://github.com/idris-lang/Idris-dev.git vendor/idris
