--- a/codegen/idris-cil.cabal
+++ b/codegen/idris-cil.cabal
@@ -8,7 +8,7 @@ license-file:        LICENSE
 author:              Rodrigo B. de Oliveira
 maintainer:          Rodrigo B. de Oliveira <rbo@acm.org>
 category:            Language
-build-type:          Simple
+build-type:          Custom
 extra-source-files:  README.md
                    , rts/*.ipkg
                    , rts/CIL/*.idr
