--- a/codegen/idris-cil.cabal
+++ b/codegen/idris-cil.cabal
@@ -60,7 +60,7 @@ test-suite spec
   ghc-options:      -funbox-strict-fields -threaded -rtsopts -with-rtsopts=-N
   ghc-prof-options: -auto-all -caf-all
   hs-source-dirs:   test
-  main-is:          Main.hs
+  main-is:          Spec.hs
   build-depends:    aeson
                   , async
                   , base >= 4 && < 5
