Move package to root directory

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,5 @@ before_install:
   - curl -L https://raw.githubusercontent.com/futurice/fum2github/3a270cf7a3b600900c1a8ed07c23d5f3ba8b115d/travis_long > travis_long && chmod +x travis_long
 
 script:
-  - cd codegen
-  - ../travis_long stack +RTS -N2 -RTS --no-terminal --skip-ghc-check install idris
-  - ../travis_long stack +RTS -N2 -RTS --no-terminal --skip-ghc-check test
+  - ./travis_long stack +RTS -N2 -RTS --no-terminal --skip-ghc-check install idris
+  - ./travis_long stack +RTS -N2 -RTS --no-terminal --skip-ghc-check test
