--- a/idris-cil.cabal
+++ b/idris-cil.cabal
@@ -17,7 +17,7 @@ cabal-version:       >=1.18
 library
   default-language: Haskell2010
   ghc-prof-options: -auto-all -caf-all
-  ghc-options:      -rtsopts -funbox-strict-fields
+  ghc-options:      -funbox-strict-fields
   hs-source-dirs:   src
   exposed-modules:  IRTS.CodegenCil
                   , IRTS.Cil.UnreachableCodeRemoval
