--- a/stack.yaml
+++ b/stack.yaml
@@ -1,9 +1,6 @@
 resolver: lts-7.0
 packages:
   - location: .
-  - location:
-      git: https://github.com/tomlokhorst/language-cil.git
-      commit: 3b005fa8f4c48882927ddcf5316455b281731b99
-    extra-dep: true
 extra-deps:
   - bool-extras-0.4.0
+  - language-cil-0.4.0
