Introduce typed array FFI
With preliminary support for System.Int32[] arrays.

See #5

--- a/idris-cil.cabal
+++ b/idris-cil.cabal
@@ -12,6 +12,7 @@ build-type:          Custom
 extra-source-files:  README.md
                    , rts/*.ipkg
                    , rts/CIL/*.idr
+                   , rts/CIL/FFI/*.idr
 cabal-version:       >=1.18
 
 library
