--- a/idris-cil.cabal
+++ b/idris-cil.cabal
@@ -62,6 +62,7 @@ test-suite spec
   ghc-prof-options: -auto-all -caf-all
   hs-source-dirs:   test
   main-is:          Spec.hs
+  other-modules:    IRTS.CodegenCilSpec
   build-depends:    aeson
                   , async
                   , base >= 4 && < 5
