Double default maxstack
As a temporary fix to supporting invoking functions with a huge number
of parameters such as those required by the effects library.

--- a/idris-cil.cabal
+++ b/idris-cil.cabal
@@ -23,6 +23,7 @@ library
   exposed-modules:  IRTS.CodegenCil
                   , IRTS.Cil.UnreachableCodeRemoval
                   , IRTS.Cil.FFI
+                  , IRTS.Cil.MaxStack
   build-depends:    base >= 4.7 && <5
                   , containers
                   , unordered-containers
