Reduce boxing of local variables
By using a limited form of type inference over the emitted instructions.

--- a/idris-cil.cabal
+++ b/idris-cil.cabal
@@ -21,10 +21,13 @@ library
   ghc-options:      -funbox-strict-fields
   hs-source-dirs:   src
   exposed-modules:  IRTS.CodegenCil
-                  , IRTS.Cil.UnreachableCodeRemoval
+  other-modules:    IRTS.Cil.UnreachableCodeRemoval
                   , IRTS.Cil.FFI
                   , IRTS.Cil.VersionParser
                   , IRTS.Cil.MaxStack
+                  , IRTS.Cil.OptimizeLocals
+                  , IRTS.Cil.Types
+
   build-depends:    base >= 4.7 && <5
                   , containers
                   , unordered-containers
