--- a/idris-cil.cabal
+++ b/idris-cil.cabal
@@ -59,7 +59,7 @@ executable idris-codegen-cil
   hs-source-dirs:     main
   default-language:   Haskell2010
   ghc-prof-options:  -auto-all -caf-all
-  ghc-options:       -threaded -rtsopts -funbox-strict-fields
+  ghc-options:       -threaded -rtsopts -funbox-strict-fields -O2
 
 test-suite spec
   default-language: Haskell2010
