--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,10 @@ addons:
       - mono-utils
 
 before_install:
+  - sudo sh -c 'echo "deb [arch=amd64] https://apt-mo.trafficmanager.net/repos/dotnet-release/ trusty main" > /etc/apt/sources.list.d/dotnetdev.list'
+  - sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 417A0893
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq dotnet-dev-1.0.0-preview2.1-003177
   # Add ghc to the PATH
   - export PATH=/opt/ghc/8.0.1/bin:$PATH
   # Download and unpack the stack executable
