Fix jump table for sequences with gaps
And replace switch by linear search on sparse sequences.

--- a/idris-cil.cabal
+++ b/idris-cil.cabal
@@ -21,6 +21,7 @@ library
   ghc-options:      -funbox-strict-fields
   hs-source-dirs:   src
   exposed-modules:  IRTS.CodegenCil
+                  , IRTS.Cil.CaseDispatch
   other-modules:    IRTS.Cil.UnreachableCodeRemoval
                   , IRTS.Cil.FFI
                   , IRTS.Cil.VersionParser
