--- a/idris-cil.cabal
+++ b/idris-cil.cabal
@@ -15,6 +15,11 @@ extra-source-files:  README.md
                    , rts/CIL/FFI/*.idr
 cabal-version:       >=1.18
 
+custom-setup
+  setup-depends: base
+               , Cabal >= 1.24 && < 1.25
+               , process
+
 library
   default-language: Haskell2010
   ghc-prof-options: -auto-all -caf-all
