--- a/idris-cil.cabal
+++ b/idris-cil.cabal
@@ -75,6 +75,7 @@ test-suite spec
   hs-source-dirs:   test
   main-is:          Spec.hs
   other-modules:    IRTS.CodegenCilSpec
+                  , IRTS.Cil.CaseDispatchSpec
   build-depends:    aeson
                   , async
                   , base >= 4 && < 5
