--- a/idris-cil.cabal
+++ b/idris-cil.cabal
@@ -23,10 +23,11 @@ custom-setup
 library
   default-language: Haskell2010
   ghc-prof-options: -auto-all -caf-all
-  ghc-options:      -funbox-strict-fields
+  ghc-options:      -funbox-strict-fields -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
   hs-source-dirs:   src
   exposed-modules:  IRTS.CodegenCil
                   , IRTS.Cil.CaseDispatch
+                  , IRTS.Cil.Builders
   other-modules:    IRTS.Cil.UnreachableCodeRemoval
                   , IRTS.Cil.FFI
                   , IRTS.Cil.Parsers
@@ -79,6 +80,7 @@ test-suite spec
   build-depends:    aeson
                   , async
                   , base >= 4 && < 5
+                  , language-cil >= 0.4.1
                   , mtl
                   , transformers
                   , transformers-compat
